[tool.poetry]
name = "cvtools-alkasm"
packages = [
    { include = "cvtools" },
]
version = "0.10.0"
description = "Utilities for computer vision in Python"
authors = ["Alexander Reynolds <ar@reynoldsalexander.com>"]
homepage = "https://github.com/alkasm/cvtools"
repository = "https://github.com/alkasm/cvtools"
keywords = ["cvtools", "computer vision", "cv", "opencv"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "!=4.2.0.32"
IPython = {version = "~=7.16", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
hypothesis = "^5.8.0"
IPython = "~=7.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
